--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "prismjs": "^1.9.0",
     "vue": "^2.5.2",
+    "vue-echarts": "^2.6.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
